--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ AUTH0_CLIENT_ID=
 AUTH0_DOMAIN=
 AUTH0_CLIENT_SECRET=
 SESSION_SECRET=
-AUTH0_CALLBACK_URL=
+AUTH0_CALLBACK_URL=http://localhost:3000/callback
